--- a/drivers/ps2kbd/CMakeLists.txt
+++ b/drivers/ps2kbd/CMakeLists.txt
@@ -5,7 +5,7 @@ target_sources(ps2kbd INTERFACE
 	${CMAKE_CURRENT_LIST_DIR}/ps2kbd_mrmltr.h
 )
 
-target_link_libraries(ps2kbd INTERFACE hardware_pio)
+target_link_libraries(ps2kbd INTERFACE hardware_pio hardware_clocks)
 
 target_include_directories(ps2kbd INTERFACE
   ${CMAKE_CURRENT_LIST_DIR}
